--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "acorn": ">=5.7.4",
+    "serialize-javascript": ">=2.1.1"
   },
   "dependencies": {}
 }
