--- a/src/public/javascripts/config/json/configuraction.json
+++ b/src/public/javascripts/config/json/configuraction.json
@@ -33,7 +33,7 @@
         "temporary": "http://120.24.108.93:8085/ http://120.24.108.93:8080/ http://test.cbcoffee.cn:8080/ http://test.cbcoffee.cn:8085/",
         "ForMal_Files_": "https://api.zgksx.com:8085/",
         "Development_Server_": "http://39.108.61.249:8080/",
-        "Development_Files_": "https://api.zgksx.com:8085/"
+        "Development_Files_": "http://39.108.61.249:8085/"
     },
     "SissionHref": {
         "URI": [
