--- a/src/public/javascripts/config/json/configuraction.json
+++ b/src/public/javascripts/config/json/configuraction.json
@@ -31,9 +31,9 @@
     "Backups": "location this JSON",
     "URLS": {
         "temporary": "http://120.24.108.93:8085/ http://120.24.108.93:8080/ http://test.cbcoffee.cn:8080/ http://test.cbcoffee.cn:8085/",
-        "ForMal_Files_": "https://api.zgksx.com:8085/",
-        "Development_Server_": "http://39.108.61.249:8080/",
-        "Development_Files_": "http://39.108.61.249:8085/"
+        "ForMal_Files_": "https://file.zgksx.com/",
+        "Development_Server_": "https://admin.api.zgksx.com/",
+        "Development_Files_": "https://file.zgksx.com/"
     },
     "SissionHref": {
         "URI": [
