--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
+    "acorn": ">=5.7.4",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^2.1.1",
     "echarts": "^4.7.0",
@@ -30,13 +32,13 @@
     "pug-html-loader": "^1.1.5",
     "qrcodejs2": "0.0.2",
     "qs": "^6.9.1",
+    "serialize-javascript": ">=2.1.1",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
+    "vant": "^2.8.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "acorn": ">=5.7.4",
-    "serialize-javascript": ">=2.1.1"
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {}
 }
