--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
+    "vant": "^2.9.0",
+    "vue": "^2.6.11",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.7.2"
