--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
+    "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
